# pytg

./: main.py  pyproject.toml
data/: PYTG_Test_Game.db
pytg/: engine.py  state.py
tests/: main.py
